--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,5 +5,10 @@
     <dimen name="counter_text_size">16sp</dimen>
     <dimen name="counter_text_spacing">8dp</dimen>
     <dimen name="button_spacing">56dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="checkbox_padding_start">8dp</dimen>
+    <dimen name="icon_button_padding">12dp</dimen>
+    <dimen name="icon_button_min_size">24dp</dimen>
+    <dimen name="zero_padding">0dp</dimen>
 </resources>
 
