Add first YouTube video

--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -54,9 +54,9 @@
         android:layout_marginBottom="@dimen/common_spacing"
         android:background="@android:color/transparent"
         android:contentDescription="@string/description_post_menu"
+        app:icon="@drawable/ic_more_vert_24"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:icon="@drawable/ic_more_vert_24" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/header"
@@ -78,12 +78,94 @@
         app:layout_constraintTop_toBottomOf="@id/header"
         tools:text="@sample/posts.json/data/content" />
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layoutVideo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="visible"
+        app:layout_constraintTop_toBottomOf="@id/content">
+
+        <ImageView
+            android:id="@+id/imageVideo"
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/small_spacing"
+            android:minWidth="@dimen/icon_button_min_size"
+            android:minHeight="@dimen/icon_button_min_size"
+            app:layout_constraintDimensionRatio="1:1"
+
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/imageVideo"
+
+            app:srcCompat="@drawable/video" />
+
+
+        <ImageButton
+            android:id="@+id/playVideo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            app:layout_constraintBottom_toBottomOf="@+id/imageVideo"
+
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintEnd_toEndOf="@+id/imageVideo"
+            app:layout_constraintStart_toStartOf="@+id/imageVideo"
+            app:layout_constraintTop_toTopOf="@+id/imageVideo"
+            android:contentDescription="@string/playVideo"
+
+            app:srcCompat="@drawable/play_circle_outline_24" />
+
+        <TextView
+            android:id="@+id/txtName"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/small_spacing"
+            android:layout_marginTop="@dimen/small_spacing"
+            android:layout_marginEnd="@dimen/small_spacing"
+
+            android:ellipsize="end"
+            android:maxLines="1"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageVideo"
+            tools:text="Название видео" />
+
+        <TextView
+            android:id="@+id/txtViewCountText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/small_spacing"
+
+            android:text="@string/viewsCount"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtName" />
+
+        <TextView
+            android:id="@+id/txtViewCount"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/small_spacing"
+            android:layout_marginEnd="@dimen/small_spacing"
+
+            android:ellipsize="end"
+            android:maxLines="1"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/txtViewCountText"
+            app:layout_constraintTop_toBottomOf="@+id/txtName"
+            tools:text="0" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/footer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="bottom"
-        app:constraint_referenced_ids="content" />
+        app:constraint_referenced_ids="layoutVideo" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/like"
@@ -115,7 +197,7 @@
         app:iconPadding="@dimen/counter_text_spacing"
         app:layout_constraintStart_toEndOf="@+id/like"
         app:layout_constraintTop_toBottomOf="@id/footer"
-        tools:text="100"/>
+        tools:text="100" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/view"
@@ -126,9 +208,9 @@
         android:layout_marginEnd="@dimen/counter_text_spacing"
         android:background="@android:color/transparent"
         android:contentDescription="@string/description_post_view"
+        app:icon="@drawable/ic_views_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/footer"
-        app:icon="@drawable/ic_views_24"
-        tools:text="100"/>
+        tools:text="100" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
