--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="common_spacing">16dp</dimen>
+    <dimen name="small_spacing">8dp</dimen>
     <dimen name="posts_avatar_size">48dp</dimen>
     <dimen name="counter_text_size">16sp</dimen>
     <dimen name="counter_text_spacing">8dp</dimen>
